--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    color: orange;
+    color: white;
     background-color: #011627;
 }
 
@@ -7,8 +7,8 @@ button {
     font-family: monospace;
     height: 150px;
     width: 150px;
-    margin: 50px;
-    background-color: #FF3366;
+    margin: 30px;
+    background-color: #026C7C;
     color: #F6F7F8;
     font-size: 16px;
     border: 2px solid #F6F7F8;
@@ -16,7 +16,7 @@ button {
 
 #synthesis {
     border:dashed;
-    margin:100px;
-    height:300px;
-    width:1100px;
+    margin:150px;
+    height:450px;
+    width:700px;
 }
